--- a/app/src/main/res/layout/activity_fruit.xml
+++ b/app/src/main/res/layout/activity_fruit.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Veg">
+    tools:context=".Fruit">
 
     <ImageView
         android:id="@+id/homeimage"
@@ -19,21 +19,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-<!--topic-->
+    <!--topic-->
     <TextView
-        android:id="@+id/fruit"
+        android:id="@+id/Vegetables"
         android:layout_width="wrap_content"
         android:layout_height="29dp"
         android:layout_marginStart="132dp"
         android:layout_marginLeft="132dp"
         android:layout_marginTop="10dp"
-        android:text="@string/fruit"
+        android:text="@string/Vegetables"
         android:textColor="@color/gray"
         android:textSize="24dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-<!--1st-->
+    <!--1st-->
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
@@ -59,7 +59,7 @@
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
         app:layout_constraintStart_toEndOf="@+id/textView7" />
-<!--3rd -->
+    <!--3rd -->
     <TextView
         android:id="@+id/textView40"
         android:layout_width="74dp"
@@ -84,7 +84,7 @@
         app:layout_constraintStart_toEndOf="@+id/textView40" />
 
 
-<!--2nd-->
+    <!--2nd-->
     <EditText
         android:id="@+id/name"
         android:layout_width="wrap_content"
@@ -111,7 +111,7 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
-<!--4th-->
+    <!--4th-->
     <TextView
         android:id="@+id/textView9"
         android:layout_width="74dp"
@@ -147,7 +147,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="24dp"
         android:background="@color/gradStart"
-        android:onClick="InsertIeam"
         android:text="@string/Addnew"
         android:textColor="@color/colorAccent"
         android:textStyle="bold|italic"
@@ -332,6 +331,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/delete2" />
-
 
 </android.support.constraint.ConstraintLayout>
