--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -88,10 +88,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:background="@color/sub_btn_line"
+        android:onClick="LaodfruitPAge"
         android:text="@string/button"
         android:textColor="@color/DarkBlue"
         android:textStyle="bold|italic"
-        android:background="@color/sub_btn_line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.534"
         app:layout_constraintStart_toStartOf="parent"
