--- a/app/src/main/res/layout/activity_customer_registration.xml
+++ b/app/src/main/res/layout/activity_customer_registration.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient"
-    tools:context=".CustomerRegistration">
+    tools:context=".CustomerRegistration"
+    android:background="#E3F2FD">
 
     <TextView
         android:id="@+id/textView41"
@@ -75,6 +75,7 @@
         android:id="@+id/txtLastName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
@@ -241,10 +242,12 @@
         android:id="@+id/btnRegisterMe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="148dp"
         android:layout_marginStart="148dp"
         android:layout_marginTop="52dp"
+        android:background="@drawable/login_button"
         android:onClick="pushRegisterMeButton"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="@string/RegisterMeButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtRePwd" />
