--- a/app/src/main/res/layout/activity_market_home.xml
+++ b/app/src/main/res/layout/activity_market_home.xml
@@ -7,8 +7,8 @@
     android:layout_height="match_parent"
     android:id="@+id/activity_login"
     android:layout_marginTop="0dp"
-    android:background="@color/white"
-    tools:context=".MarketHome">
+    tools:context=".MarketHome"
+    android:background="#E3F2FD">
 
     <FrameLayout
         android:id="@+id/loginButton"
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/blue"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
 
     <ImageView
