--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -6,21 +6,23 @@
     android:background="@color/cardview_dark_background"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:weightSum="2"
     android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="96dp"
         android:layout_height="match_parent"
         android:layout_weight="1">
+
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:scaleType="fitXY"
-            android:id="@+id/itemPic"/>
+            android:id="@+id/itemPic"
+            android:layout_width="145dp"
+            android:layout_height="145dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginTop="7dp"
+            android:scaleType="fitXY" />
     </LinearLayout>
 
     <LinearLayout
@@ -28,36 +30,52 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/itemDescription"
+            android:textSize="15sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/itemDescriptionItemMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Item"
+            android:text="@string/itemNo"
             android:textSize="15sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/itemNo"
             />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Price"
+            android:text="@string/price"
             android:textSize="15sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/price"
             />
+
         <Button
+            android:id="@+id/buy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/buy"
-            android:visibility="invisible"
-            android:text="@string/AddToCart"/>
+            android:layout_marginLeft="40dp"
+            android:text="@string/AddToCart"
+            android:visibility="invisible" />
     </LinearLayout>
 
 
