--- a/app/src/main/res/layout/cart_card_view.xml
+++ b/app/src/main/res/layout/cart_card_view.xml
@@ -9,26 +9,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="2"
-        android:orientation="horizontal">
+        android:background="#C4C1C0"
+        android:orientation="horizontal"
+        android:weightSum="2">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="145dp"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:background="#FFFEFE">
 
             <ImageView
                 android:id="@+id/itemPicCart"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="145dp"
+                android:layout_height="145dp"
+                android:layout_marginLeft="6dp"
+                android:layout_marginTop="7dp"
                 android:scaleType="fitXY" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="25dp"
             android:layout_weight="1"
+            android:background="#FCFBF8"
             android:orientation="vertical">
 
             <TextView
@@ -41,7 +46,8 @@
             <TextView
                 android:id="@+id/itemNoCart"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -53,7 +59,8 @@
             <TextView
                 android:id="@+id/priceCart"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -66,6 +73,7 @@
                 android:id="@+id/quantityCart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#FFFFFF"
                 android:ems="10"
                 android:inputType="number" />
 
@@ -78,15 +86,20 @@
                     android:id="@+id/btnEdit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:background="#8A9E8A"
                     android:text="EDIT" />
 
                 <Button
                     android:id="@+id/btnRemove"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="30dp"
+                    android:background="#DB5F52"
                     android:text="@string/RemoveButton" />
             </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
