--- a/app/src/main/res/layout/activity_employee_home.xml
+++ b/app/src/main/res/layout/activity_employee_home.xml
@@ -42,7 +42,7 @@
             android:background="@color/blue"
             android:textStyle="italic|bold"
             android:textColor="@color/blackk"/>
-
+<!--bbb-->
         <Button
             android:id="@+id/button6"
             android:layout_width="match_parent"
