--- a/app/src/main/res/layout/activity_get_address.xml
+++ b/app/src/main/res/layout/activity_get_address.xml
@@ -32,7 +32,7 @@
         android:textSize="40sp" />
 
     <!-- name-->
-    <EditText
+    <TextView
         android:id="@+id/et_name"
         android:textColor="#000000"
         android:background="#11000000"
@@ -59,7 +59,7 @@
         android:textColor="#000000"
         android:textSize="16sp" />
 
-    <EditText
+    <TextView
         android:id="@+id/et_name2"
         android:textColor="#000000"
         android:background="#11000000"
@@ -70,7 +70,7 @@
         android:layout_marginTop="40dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="matara" />
+        android:text="matara" />
 
     <TextView
         android:id="@+id/tv_name2"
@@ -86,7 +86,7 @@
         android:textColor="#000000"
         android:textSize="16sp" />
 
-    <EditText
+    <TextView
         android:id="@+id/et_name3"
         android:textColor="#000000"
         android:background="#11000000"
@@ -97,7 +97,7 @@
         android:layout_marginTop="40dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="0719502049" />
+        android:text="0719502049" />
 
     <TextView
         android:id="@+id/tv_name3"
@@ -113,43 +113,54 @@
         android:textColor="#000000"
         android:textSize="16sp" />
 
-    <EditText
+    <TextView
         android:id="@+id/et_name4"
-        android:textColor="#ffffff"
+        android:textColor="#000"
         android:background="#11000000"
         android:layout_width="260dp"
         android:layout_height="30dp"
-        android:layout_below="@+id/tv_name3"
+        android:layout_below="@+id/et_name3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="2000" />
+        android:text="2000" />
 
     <TextView
         android:id="@+id/tv_name4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_name3"
+        android:layout_below="@+id/et_name3"
         android:layout_alignStart="@+id/et_name"
         android:layout_alignLeft="@+id/et_name"
         android:layout_marginStart="0dp"
         android:layout_marginLeft="0dp"
-        android:layout_marginTop="27dp"
-        android:text="Total Price :"
+        android:layout_marginTop="20dp"
+        android:text="Email :"
         android:textColor="#000000"
         android:textSize="16sp" />
 
 
     <Button
-        android:id="@+id/btn_register"
+        android:id="@+id/btn_dilivered"
         android:layout_width="260dp"
         android:layout_height="50dp"
         android:layout_below="@+id/et_name4"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/mybutton1"
         android:onClick="ReloadGetOrder"
         android:text="Delivered" />
+    <!---->
+    <Button
+        android:id="@+id/btn_showde"
+        android:layout_width="260dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/btn_dilivered"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/mybutton"
+        android:onClick="ReloadGetOrder"
+        android:text="SHOW DETAILS" />
 
 </RelativeLayout>
