--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -118,9 +118,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
         android:layout_marginTop="476dp"
-        android:background="@color/blue"
+        android:background="@color/gradEnd"
         android:text="Login"
-        android:textColor="@color/gradEnd"
+        android:textColor="@color/DarkBlue"
         android:textStyle="italic|bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -135,7 +135,7 @@
         android:layout_marginBottom="8dp"
         android:text="Remaning no of attempts"
         android:textStyle="italic|bold"
-        android:textColor="@color/white"
+        android:textColor="@color/blackk"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
