--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/imgUser"
             android:layout_centerHorizontal="true"
-            android:text="Kusal Chathuranga"
+            android:text=" "
             android:textSize="32sp"
             android:textColor="@color/white"
             android:fontFamily="sans-serif-light"
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_name1"
             android:layout_centerHorizontal="true"
-            android:text="kusalchathuranga2@gmail.com"
+            android:text=""
             android:textSize="25sp"
             android:textColor="@color/Rides"
             android:fontFamily="sans-serif"
@@ -88,7 +88,7 @@
                     android:id="@+id/password_diliver"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1000"
+                    android:text=""
                     android:textSize="13sp"
                     android:fontFamily="sans-serif-light"
                     android:textColor="@color/white"/>
@@ -125,7 +125,7 @@
                     android:id="@+id/re_repassword_diliver"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="3000"
+                    android:text=""
                     android:textSize="13sp"
                     android:fontFamily="sans-serif-light"
                     android:textColor="@color/white"/>
@@ -175,7 +175,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
-                    android:text="0712323234"
+                    android:text=""
                     android:textSize="18sp"
                     android:textColor="#000000"/>
 
@@ -205,7 +205,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
-                    android:text="12345678"
+                    android:text=""
                     android:textSize="18sp"
                     android:textColor="#000000"/>
 
@@ -235,7 +235,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
-                    android:text="7878787878"
+                    android:text=""
                     android:textColor="#000000"
                     android:textSize="18sp" />
 
