--- a/app/src/main/res/layout/activity_deliver_login.xml
+++ b/app/src/main/res/layout/activity_deliver_login.xml
@@ -69,7 +69,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:hint="Enter Password" />
 
     <TextView
