--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    android:layout_width="match_parent"
+<android.support.v7.widget.CardView android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="4dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    card_view:cardCornerRadius="6dp"
+    card_view:contentPadding="2dp"
+    card_view:cardElevation="4dp"
+    card_view:cardMaxElevation="6dp"
     android:background="@color/cardview_dark_background"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,7 +26,7 @@
             android:id="@+id/itemPic"
             android:layout_width="145dp"
             android:layout_height="145dp"
-            android:layout_marginLeft="6dp"
+            android:layout_marginLeft="2dp"
             android:layout_marginTop="7dp"
             android:scaleType="fitXY" />
     </LinearLayout>
@@ -60,7 +66,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/price"
+            android:text="@string/priceInRuppees"
             android:textSize="15sp"
             android:textStyle="bold" />
         <TextView
@@ -72,8 +78,11 @@
         <Button
             android:id="@+id/buy"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_marginLeft="40dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/rounded_corner_button"
+            android:drawableStart="@drawable/shoppingcartbutton"
             android:text="@string/AddToCart"
             android:visibility="invisible" />
     </LinearLayout>
