--- a/app/src/main/res/layout/cart_card_view.xml
+++ b/app/src/main/res/layout/cart_card_view.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="4dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    card_view:cardCornerRadius="6dp"
+    card_view:contentPadding="2dp"
+    card_view:cardElevation="4dp"
+    card_view:cardMaxElevation="6dp"
     android:background="@color/cardview_dark_background">
 
     <LinearLayout
@@ -23,7 +29,7 @@
                 android:id="@+id/itemPicCart"
                 android:layout_width="145dp"
                 android:layout_height="145dp"
-                android:layout_marginLeft="6dp"
+                android:layout_marginLeft="2dp"
                 android:layout_marginTop="7dp"
                 android:scaleType="fitXY" />
 
@@ -39,7 +45,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Item"
+                android:text="@string/itemNo"
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
@@ -52,7 +58,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Price"
+                android:text="@string/priceInRuppees"
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
@@ -65,7 +71,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Quantity"
+                android:text="@string/quantity"
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
@@ -85,17 +91,17 @@
                 <Button
                     android:id="@+id/btnEdit"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_marginLeft="10dp"
-                    android:background="#8A9E8A"
-                    android:text="EDIT" />
+                    android:background="@drawable/rounded_corner_button"
+                    android:text="@string/btnEdit" />
 
                 <Button
                     android:id="@+id/btnRemove"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="30dp"
-                    android:background="#DB5F52"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/rounded_corner_button_red"
                     android:text="@string/RemoveButton" />
             </LinearLayout>
         </LinearLayout>
