--- a/app/src/main/res/layout/activity_fish_meat.xml
+++ b/app/src/main/res/layout/activity_fish_meat.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Veg">
-
+    tools:context=".FishMeat">
     <ImageView
         android:id="@+id/homeimage"
         android:layout_width="526dp"
@@ -19,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-<!--topic-->
+    <!--topic-->
     <TextView
         android:id="@+id/Vegetables"
         android:layout_width="wrap_content"
@@ -27,14 +26,14 @@
         android:layout_marginStart="132dp"
         android:layout_marginLeft="132dp"
         android:layout_marginTop="10dp"
-        android:text="@string/Vegetables"
+        android:text="@string/button4"
         android:textColor="@color/gray"
         android:textSize="24dp"
         android:textStyle="bold"
         android:elevation="6dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-<!--1st-->
+    <!--1st-->
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
@@ -60,7 +59,7 @@
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
         app:layout_constraintStart_toEndOf="@+id/textView7" />
-<!--3rd -->
+    <!--3rd -->
     <TextView
         android:id="@+id/textView40"
         android:layout_width="74dp"
@@ -85,7 +84,7 @@
         app:layout_constraintStart_toEndOf="@+id/textView40" />
 
 
-<!--2nd-->
+    <!--2nd-->
     <EditText
         android:id="@+id/name"
         android:layout_width="wrap_content"
@@ -112,7 +111,7 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
-<!--4th-->
+    <!--4th-->
     <TextView
         android:id="@+id/textView9"
         android:layout_width="74dp"
